--- a/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/Selling---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/Selling---4web.org
@@ -4,5 +4,10 @@ Selling
  
 * Second
 
+XR is a salesman's bazooka
 
 * Abstract
+
+Want to engage someone?  Your showmanship is no longer the main act, but the host of the show.  Computers will do it much better :) 
+
+XR simulates environments and can elicit emotions nearly on the spot.  How we influence people through XR media will need to be regulated, but until then it is a wild west of who can develop whatever persuasive, impactful, hypnotic content they want.  Oh yeah, and you can retail remotely.   Telepresence inside your virtual store.   Recall the world wide web's  impact on the sales process, and magnify that.  
