--- a/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/coachingg---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/coachingg---4web.org
@@ -1,10 +1,13 @@
 * Header
 
-Coaching
+Consultation 
  
 * Second
 
+Coaching
 
 * Abstract
 
-* Content
+XR enables teleprensences, meaning your coach can be by yur side at any time.   Like magic, a tutor appears - in any shaoe or form you want.  Maybe a fairy Godmother?  By having constant access to someone in visual spatial presence, we can be advised on physical form - which has never been possible until now.   
+
+Like youtube-stars, XR will have it's wave of rising-stars for homemade, serial experiences that teach, inspire, coach or otherwise entertain millions.   
