--- a/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/onboarding---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/onboarding---4web.org
@@ -1,10 +1,11 @@
 * Header
 
-On-Boarding
+Consultation
  
 * Second
 
+On-boarding
 
 * Abstract
 
-* Content
+What if you knew your potential new hire better than they knew themself?   In XR we can learn a great deal very quickly from peoples' choices in simulated environments.   Learn if and when fight/flight kicks in.  How one reacts to confrontation.  How often they are late, and why.  XR is a supreme HR tool because it connects information to the people we're managing more plentifully than ever.   
