--- a/Pages/1Solutions/2Consultation/Industry Insights/x01industrysolutionstext_finalized.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/x01industrysolutionstext_finalized.org
@@ -1,6 +1,13 @@
 
+* Header
 
-**** Industry Solutions
+Consultation
+
+* Second
+
+Industry Solutions
+
+* Abstract 
 
 Education, Public Health, Travel, Entertainment, Space Exploration, Real Estate, Architecture, Design, and many more industries are finding solutions to their gravest challenges with the application of immersive media by extending reality (XR).   The adoption of 3D computing will become as ubiquitous as mobile devices are today. However, uncovering solutions and making use of the technology is up to us.  Share your challenge and we can find a solution together. 
 
