--- a/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/socialmedia---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/socialmedia---4web.org
@@ -1,10 +1,15 @@
+
+
 * Header
 
-Social media
- 
+Consultation
+
 * Second
 
+Social Media
 
 * Abstract
 
-* Content
+The upper-western world all became self-publishers at the turn of last decade with the rise of social media.   Before it was hard to be broadcasted, but easy to be seen.  Now it is easy to broadcast and hard to be seen.   The game has changed, and it is because we've had a digital infrastructure (world wide web) that can deliver high quantities of media for extremely cheap.  Social Media created network marketing. 
+
+Much will stay the same but it will all look totally different.  Instead of following "handles" and "accounts" that are portayed on flat screens, we will befriend avatars in 3D space that engage us physically, instead of just with likes or comments.   Social is about to get a face lift, tummy tuck and botox, but don't worry social will be just as ugly, if not uglier, again, soon.   
