--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/realestate---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/realestate---4web.org
@@ -4,9 +4,21 @@ Consultation
  
 * Second
 
-Retail
+Real Estate
 
 * Abstract
 
 
 Bring prospective buyer inside the home they're considering for purchase.  This will reduce travel cost, increase convenience, increase number of properties viewable in a single day.  We use Photogrammetry to remodel and texturize the interior of property
+
+Quick to adopt XR technologies, renters, developers and investors alike benefit from
+virtual home-building. While renters enjoy modeling interiors, developers can seamlessly
+communicate designs and investors can envision the structure in it’s entirety before a project
+even breaks ground. These practices make for major cost savings. Productions range from
+$500 for still 360° photo to $10mm+ for the fully programmed model sky scrapper.
+«Technology is changing rapidly, but we think the use of
+virtual reality will reshape and transform how new homes
+are designed, marketed and sold,»
+- Tim Costello, founder and CEO, Builder Homesite Inc. (BHI)
+
+
