--- a/Pages/1Solutions/2Consultation/Learning Lab/Learninglab---4web.org
+++ b/Pages/1Solutions/2Consultation/Learning Lab/Learninglab---4web.org
@@ -6,11 +6,18 @@ Learning Labs
 
 Learn something dumb dumb
 
-* Abstract
-
 
 - The Basics
 
-- VR vs. AR
+- Resource Center
 
-- Academic Studies
+- E Learning
+
+
+* Abstract
+
+For example, Dale's Cone of Learning was an innovative study in the mid 20th century supporting the notion that within two weeks humans retain 90% of what they do and say - a breakthrough realization compared to the 50% retention of what we see and hear. Credible studies like this one are proving applicable again as the immersive XR worlds continue to grow.
+
+[ DALES CONE OF LEARNING]
+
+ 
