--- a/Pages/1Solutions/2Consultation/Learning Lab/ResourceCenter---4web.org
+++ b/Pages/1Solutions/2Consultation/Learning Lab/ResourceCenter---4web.org
@@ -1,10 +1,22 @@
 * Header
 
+Consultation
 
-Resource Center
- 
+* Second
+
+Resource Center 
 
 * Abstract
 
+Through academic relationships and our own study of the industry and its history, we'll periodically deliver presentations and supporting documents to assist your understanding of XR and better assist your clients. 
 
-* Content
+- Academic Papers
+- Production Tools
+- Favorite Forums
+- Featured this week
+- News
+- Chatbot
+
+
+
+
