--- a/Pages/1Solutions/2Consultation/Hire Us/strategydevelopment_finalized.org
+++ b/Pages/1Solutions/2Consultation/Hire Us/strategydevelopment_finalized.org
@@ -1,6 +1,6 @@
 *** Strategy Development
 
-XR can be a tool to reduce internal costs, or increase sales.   You understand your industry.  We understand XR.  Together, we can devise and execute a plan to disrupt modern methods, accelerate business and earn a measurable return on the time, money and resources we invest.
+XR can be a tool to reduce internal costs or increase sales. You understand your industry. We understand XR. Together we can devise and execute a plan to disrupt modern methods, accelerate business, and earn a measurable return on invested time, money, and resources.
 
 [text box: What industry?]
 [text box: what is the goal]
