--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/healthcare------4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/healthcare------4web.org
@@ -8,10 +8,10 @@ XR Health Care Solution: Solve real health problems
 
 * Abstract
 
-creating lifelike sensory experience to incentivize the patient to work toward recovery
-What-relieving phantom pain that can often emerge during rehab or treatment process
-Why-Patients are often deincentivized or inflicted with mental blocks and the perception of pain
-How-Use of biometrics, haptics, 3D audio
+Create a lifelike sensory experience to incentivize the patient to work toward recovery.
 
+What: Relieve phantom pain that can occur during rehab or treatment process.
 
+Why: Patients are often inflicted with mental blocks and the perception of pain
 
+How: Through advanced technologies like biometrics, haptics, 3D audio.
