--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/educationtext---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/educationtext---4web.org
@@ -8,8 +8,6 @@ Learn more
 
 * Abstract
 
-Universities as portals to the most advanced dimensions of media ever - a new era of exploration.   Maybe the new frontier of exploration isn't space, the ocean, or inward-awereness, but jumping into this digital world we've developed over the last 30 years.   
+Allow universities to serve as portals to the most advanced dimensions of media, a new era of exploration. New frontiers like space, sea, and internal awareness have gained steam in the 21st century. Developing along with them has been this digital world that’s been in the making for more than a half century.   
 
-Those with the leading technology tools (vessels) will venture the furthest, the fastest.   A new era of exploration will be lead by tech-titans and educational institutions.  Both are the leading educators in the world.   
-
-* Content
+Those with the leading technological tools (vessels) will venture the furthest, the fastest. A new era of exploration will be lead by tech titans and educational institutions. Both are the leading educators in the world.   
