--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/transport---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/transport---4web.org
@@ -4,9 +4,8 @@ XR Airline Solution
  
 * Second
 
-virtual seemless travel
+Seamless Virtual Travel
 
 * Abstract
 
-XR is the ultimate travel-branding tool.  You have full control over the travel experience and this is untapped potential in the industry.   The transportation - the journey.   The fun is hardly the destination, but how we arrived their and the glories and tribulations along the way.
- 
+XR is the ultimate travel-branding tool.  You have full control over the travel experience - untapped potential in the industry. The fun is hardly the destination but how we arrived their and the glories and tribulations along the way.
