--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/gaminigtext---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/gaminigtext---4web.org
@@ -8,6 +8,6 @@ Gamification will revolutionize education
 
 * Abstract
 
-The gaming industry leads by a fat margin insights on how to maximize player experiences.  
+The gaming industry is imbedded in the Virtual World. We provide insights on how to maximize player experiences.  
 
 * Content
