--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/entertainment---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/entertainment---4web.org
@@ -8,7 +8,7 @@ Be the story
 
 * Abstract
 
-Media and live entertainment are about to be fundamentally rocked by computer sciences and gaming.  The two are on the verge of merging in cahoots with entertainers to run away with the industry.
+Media and live entertainment are about to be shaken to their core by computer sciences and gaming. The two are on the verge of merging with entertainers and running away with the industry.
 
 * Content
-With the boom of new AR applications, XR has become the new platform for entertainment media. A connection and experience unlike any possible through traditional media, XR allows the user to connect with and be a part of the scene they are viewing. 
+With the boom of new AR applications, XR has become the new platform for entertainment media. A connection and experience unlike any possible through traditional media, XR allows the user to connect with and be part of the scene they’re viewing. 
