--- a/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/surveillance----4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/surveillance----4web.org
@@ -8,8 +8,8 @@ XR Surveillance
 
 * Abstract
 
-Virtual Reality is personal-information vacuum that sits on your face. All of our actions, reactions, muscle tensions, eye movements, micro-expressions, even some of your thinking strategies, are being logged and indexed by VR hardware. The most data-happy people-miners in the world, Facebook, Google, et cetera are behind the mass collection of intimate info, and way ahead of the law.
-You cannot stop by the rain, but we recommend you educate yourself on the perils we as a society face. To start, research and understand data-capitalism. There is no further information available here because this is not our field of expertise.
+Virtual Reality is a personal-information vacuum that rests centimeters from your eyes. All of our actions, reactions, muscle tensions, eye movements, micro-expressions, even some of your thinking strategies, are logged and indexed by VR hardware. The most data-happy people-miners in the world, Facebook, Google, et cetera are behind the mass collection of intimate info and way ahead of the law.
+You cannot stop by the train, so we recommend you educate yourself on the perils we as a society face. To start, research and understand data-capitalism. There is no further information available here because this is not our field of expertise.
 
 
 * Content
