--- a/Pages/1Solutions/2Consultation/Hire Us/trainingcourses_finalized.org
+++ b/Pages/1Solutions/2Consultation/Hire Us/trainingcourses_finalized.org
@@ -2,9 +2,8 @@
 
 This is a 3-month, light-load training course with weekly lessons customized to your business and goals.  
 
-We'll come set you up witht the basic equipment and familiarize you and your team with xr hardware that can run virtual reality and other GPU-intesive programs.   
-
-We'll meet weekly to cordinate the project's design and educate you on news, software, middleware and netowrking as it pertains to your business.  Every project is different and there is no catch-all solution to being educated.  Your feedback, leanring style and strengths drive the lesson plans.  We commit 10-hours a week, two collaboratively to work with you one on one, and the rest to developing your ideas.  This approach keeps you available to your tradiational responsibilities, while still captaining the ship.     
+We'll come set you up with the basic equipment and familiarize you and your team with XR hardware that can run Virtual Reality and other GPU-intensive programs.   
+We'll meet weekly to coordinate the project's design and educate you on news, software, middleware, and networking as it pertains to your business.  Every project is different and there is no catch-all solution to being educated. Your feedback, learning style and strengths drive the lesson plans. We commit 10 hours/week to collaboratively to work with you one-on-one, and the rest to developing your ideas. This approach allows your main business responsibilities to remain the priority while still captaining the XR ship.       
    
 
 After 12 weeks we will deliver a full development specification, including the technical architecture, produciton timeline, expenses and financial strategy.
