--- a/Pages/1Solutions/2Consultation/Learning Lab/The Basics/arvsvr_finalized.org
+++ b/Pages/1Solutions/2Consultation/Learning Lab/The Basics/arvsvr_finalized.org
@@ -9,7 +9,7 @@ AR is the mobile solution to full immersion (VR)
 
 * Abstract
 
-** Aumented reality
+** Augmented reality
 
 - Alters the real world on a screen or head-mounted screen.
 
@@ -21,7 +21,7 @@ AR is the mobile solution to full immersion (VR)
 
 - Allows you to interact with digital media
 
-- Create nonreal geometry and retina displays 
+- Create non real geometry and retina displays 
 
 - Programmed in coding languages C++, javascript, WebGL, python, C# and many others.  
 
@@ -33,12 +33,11 @@ AR is the mobile solution to full immersion (VR)
 
 - feels like teleporting to a different dimension
 
-- lets you exist in alternet worlds with other humans to train, learn or play.
-
-
+- lets you exist in alternate worlds with other humans to train, learn or play.
 
 
 
 * Content
 
-/Ven diagram/
+/Venn diagram/
+
