--- a/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/Abstract.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/Abstract.org
@@ -1,1 +1,1 @@
-Display content in linear sequence as in a retail store or musuem 
+Display content in linear sequence as in a retail store or museum 
